adds new project images

--- a/index.html
+++ b/index.html
@@ -112,13 +112,17 @@
     <!-- project tiles (thumbnails with github links on-click) -->
     <div id="projects">
 
-      <p class="project_container"><a class="project_link" href="https://github.com/PMGH/REST_student_enrolment" target="_blank"><rect class="project_img" id="student_enrolment_project" alt="Student Enrolment Project icon - Hogwarts emblem and house emblems"></a></p>
+      <p class="project_container"><a class="project_link" href="https://github.com/PMGH/makeup" target="_blank"><rect class="project_img" id="project_1" alt="Makeup project icon"></a></p>
 
-      <p class="project_container"><a class="project_link" href="https://github.com/PMGH/rick_and_morty_top_trumps" target="_blank"><rect class="project_img" id="top_trumps_project" alt="Rick and Morty Top Trumps Project icon"></a></p>
+      <p class="project_container"><a class="project_link" href="https://github.com/PMGH/snow-resorts-weather" target="_blank"><rect class="project_img" id="project_6" alt="Global Ski Areas Weather project icon"></a></p>
 
-      <p class="project_container"><a class="project_link" href="https://github.com/PMGH/record_store" target="_blank"><rect class="project_img" id="record_store_project" alt="Record Store Project icon - red set of headphones"></a></p>
+      <p class="project_container"><a class="project_link" href="https://github.com/PMGH/gin" target="_blank"><rect class="project_img" id="project_4" alt="Gin project icon"></a></p>
 
-      <p class="project_container"><a class="project_link" href="https://github.com/PMGH/REST_pizza_shop" target="_blank"><rect class="project_img" id="pizza_shop_project" alt="Pizza Shop project icon"></a></p>
+      <p class="project_container"><a class="project_link" href="https://github.com/PMGH/js_brewdog_beers" target="_blank"><rect class="project_img" id="project_5" alt="Brewdog Beers project icon"></a></p>
+
+      <p class="project_container"><a class="project_link" href="https://github.com/PMGH/rick_and_morty_top_trumps" target="_blank"><rect class="project_img" id="project_2" alt="Rick and Morty Top Trumps Project icon"></a></p>
+
+      <p class="project_container"><a class="project_link" href="https://github.com/PMGH/record_store" target="_blank"><rect class="project_img" id="project_3" alt="Record Store Project icon"></a></p>
 
     </div>
 
