amends content and form placeholders

--- a/index.html
+++ b/index.html
@@ -74,18 +74,16 @@
       The projects I have worked on so far have allowed me to learn various languages, tools, frameworks and how to work in a development team with a shared codebase using version control. I have gained project planning experience, being able to design the architecture of a solution, bring it through to completion and present the final product.<br /><br />
       Languages:&nbsp;&nbsp; Ruby, SQL, Java and JavaScript.<br /><br />
       - Agile SDLC:&nbsp;&nbsp; daily stand-ups, paired and mob programming.<br />
-      - Agile Tools:&nbsp;&nbsp; Slack and Trello.<br />
-      - Databases:&nbsp;&nbsp; SQL, PostGres (Terminal) and SQLite (Android Studio).<br />
+      - Agile Tools:&nbsp;&nbsp; GitHub Projects/Issues, Slack and Trello.<br />
+      - Databases:&nbsp;&nbsp; PostGres, SQLite (Android Studio) and MongoDB.<br />
       - Design Patterns:&nbsp;&nbsp; MVC and Singleton.<br />
       - Markup and Style Sheet Languages:&nbsp;&nbsp; HTML5, CSS3 and XML.<br />
-      - Test Driven Development:&nbsp;&nbsp; MiniTest (Ruby), JUnit and Mockito (Java).<br />
-      - Building software for users:&nbsp;&nbsp; proto-personas, user stories, and wireframes.<br />
+      - Test Driven Development:&nbsp;&nbsp; MiniTest (Ruby), JUnit and Mockito (Java), and Mocha (JavaScript).<br />
+      - Building software for users:&nbsp;&nbsp; proto-personas, user journeys, and wireframes.<br />
       - Version Control:&nbsp;&nbsp; Git, GitHub and BitBucket.<br /><br />
       Please select a project below to view the associated GitHub repository.
     </p>
 
-    <!-- project tiles (images with popup/transparent overlay holding additional information) -->
-    <!-- project tiles (thumbnails with github links on-click) -->
     <div id="projects">
 
       <p class="project_container"><a class="project_link" href="https://github.com/PMGH/makeup" target="_blank"><rect class="project_img" id="project_1" alt="Makeup project icon"></a></p>
@@ -135,16 +133,16 @@
     <div id="form">
       <form class="contact_form" action="mailto:petermccready2@gmail.com" method="GET" enctype="text/plain">
         <div class="form_item">
-          <img id="terminal_prompt" src="./Icons/right-grey-arrow-prompt.png"/>
-          name: <input type="text" name="name" />
+          <!-- <img id="terminal_prompt" src="./Icons/right-grey-arrow-prompt.png"/> -->
+          <input type="text" name="name" placeholder="Name" />
         </div>
         <div class="form_item">
-          <img id="terminal_prompt" src="./Icons/right-grey-arrow-prompt.png"/>
-          email: <input type="text" name="email" />
+          <!-- <img id="terminal_prompt" src="./Icons/right-grey-arrow-prompt.png"/> -->
+          <input type="text" name="email" placeholder="Email address" />
         </div>
         <div class="form_item">
-          <img id="terminal_prompt" src="./Icons/right-grey-arrow-prompt.png"/>
-          message: <br><textarea id="message" type="text" name="body"></textarea>
+          <!-- <img id="terminal_prompt" src="./Icons/right-grey-arrow-prompt.png"/> -->
+          <br><textarea id="message" type="text" name="body" placeholder="Your message"></textarea>
         </div>
         <div>
           <input type="submit" value="Submit">
